css fix text-align on sm btns

--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -24,7 +24,7 @@ WARNING :
   justify-content: center;
 }
 .fr-btn-align-left {
-  justify-content: left !important;
+  text-align: left;
 }
 .fr-btn-sm-align-center > svg {
   min-width: 19px !important;
@@ -68,6 +68,9 @@ code {
     width: 100% !important;
     justify-content: center;
   }
+  .fr-btn-fullwidth {
+    height: 64px;
+  }
   .fr-btn-sm-align-center > span {
     width: 100%;
   }
@@ -76,7 +79,7 @@ code {
   }
 }
 
-@media screen and (min-width: 0em) and (max-width: 35em) {
+@media screen and (min-width: 0em) and (max-width: 36em) {
   /*! media sm */
   .fr-hidden-xs {
     display: none !important;
